Fixed bug where from 3rd race it wasn't visible.

--- a/Src/Trackr.Website/src/app/championship/championship.component.scss
+++ b/Src/Trackr.Website/src/app/championship/championship.component.scss
@@ -40,6 +40,11 @@ app-spinner {
     h5 {
       color: $gull-grey;
 
+      &.inline {
+        display: inline-block;
+        margin: 0;
+      }
+
       small {
         display: block;
         margin-top: 15px;
